# planner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: config.py  entrypoints.py  main.py
bot/db/: base.py  models.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1a84aa9cb3d8_initial.py  a3f2b1c4d5e6_reminders_event_fk_drop_reminder_minutes.py  b1c2d3e4f5a6_tasks_scheduled_at_reminders_task_fk.py
bot/db/repo/: __init__.py  analytics.py  calendar.py  chat_history.py  integrations.py  reminders.py  tasks.py  users.py
bot/handlers/: __init__.py  ai_chat.py  analytics.py  briefing.py  calendar.py  confirm_intent.py  google_auth.py  lists_fsm.py  reminders.py  settings.py  start.py  tasks.py  voice.py
bot/keyboards/: __init__.py  calendar.py  settings.py  tasks.py
bot/middlewares/: __init__.py  auth.py  user.py
bot/services/: __init__.py  analytics.py  briefing.py  calendar.py  reminders.py  scheduler.py  tasks.py  voice.py
bot/services/ai/: clients.py
bot/services/integrations/: __init__.py  base.py  registry.py
bot/services/intent/: __init__.py  models.py  parser.py  prompts.py  router.py
bot/utils/: dt.py
deploy/: nginx.conf
docs/: architecture.md  requirements.md  todo.md
tests/: conftest.py  test_ai_clients.py  test_analytics.py  test_auth_middleware.py  test_briefing.py  test_calendar.py  test_dt.py  test_intent_parser.py  test_intent_router.py  test_registry.py  test_reminders.py  test_tasks.py
(+2 files in other folders)
