[project]
name = "mastroplan-bot"
version = "0.1.0"
description = "Personal assistant Telegram bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.30",
    "openai>=1.40",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "ffmpeg-python>=0.2",
    "aiofiles>=23.0",
    "alembic>=1.13",
    "pytz>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project.scripts]
dev     = "bot.entrypoints:dev"
service = "bot.entrypoints:service"
tests   = "bot.entrypoints:tests"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.alembic]
script_location = "bot/db/migrations"
